  * The X max attribute for certain fonts is zero (reference
    https://imagemagick.org/discourse-server/viewtopic.php?f=1&t=37723).
  * Fix possible null pointer dereference in magick/property.c (reference
    https://github.com/ImageMagick/ImageMagick/issues/1225).
  * Multi-value of jp2:quality does not work (reference
    https://github.com/ImageMagick/ImageMagick/issues/1873).

2020-03-27  6.9.11-3 Cristy  <quetzlzacatenango@image...>
  * Release ImageMagick version 6.9.11-3, GIT revision 15511:23bb003:20200327.

2020-03-22  6.9.11-3 Cristy  <quetzlzacatenango@image...>
  * Fix numerical instability issue when drawing lines.
  * Fix off by one exception when calling QuantumImages() (reference
    https://github.com/ImageMagick/ImageMagick6/issues/77).
  * Improve mono font rendering (reference
    https://imagemagick.org/discourse-server/viewtopic.php?f=1&t=37723).

2020-03-21  6.9.11-2 Cristy  <quetzlzacatenango@image...>
  * Release ImageMagick version 6.9.11-2, GIT revision 15500:698c610:20200321

2020-03-16  6.9.11-2 Cristy  <quetzlzacatenango@image...>
  * Fixed another sizing issue with the label coder when pointsize is set.
  * Respect explicit image filename modified (e.g. png24:im.png) (reference
    https://github.com/ImageMagick/ImageMagick/issues/1835).
  * Stroked dash array render properly again.

2020-03-15  6.9.11-1 Cristy  <quetzlzacatenango@image...>
  * Release ImageMagick version 6.9.11-1, GIT revision 15487:ffac3c4:20200315.

2020-03-07  6.9.11-1 Cristy  <quetzlzacatenango@image...>
  * Do not throw exception on empty draw path (reference
    https://github.com/ImageMagick/ImageMagick/issues/974).
  * Fix possible buffer overflow in ComplexImages().

2020-03-06  6.9.11-0 Cristy  <quetzlzacatenango@image...>
  * Release ImageMagick version 6.9.11-0, GIT revision 15465:f7c926d:20200306.

2020-03-01  6.9.11-0 Cristy  <quetzlzacatenango@image...>
  * Label text no longer gets cut-off (reference