@@ -8,6 +8,8 @@
     https://github.com/ImageMagick/ImageMagick/issues/1225).
   * Multi-value of jp2:quality does not work (reference
     https://github.com/ImageMagick/ImageMagick/issues/1873).
+  * Return EPS & TIFF images from the EPT image format (reference
+    https://imagemagick.org/discourse-server/viewtopic.php?f=3&t=37781).
 
 2020-03-27  6.9.11-3 Cristy  <quetzlzacatenango@image...>
   * Release ImageMagick version 6.9.11-3, GIT revision 15511:23bb003:20200327.
